--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@layer base {
+  :root {
+    --background: 229 57% 100%;
+    --foreground: 229 63% 4%;
+    --muted: 229 12% 86%;
+    --muted-foreground: 229 10% 37%;
+    --popover: 0 0% 99%;
+    --popover-foreground: 229 63% 3%;
+    --card: 0 0% 99%;
+    --card-foreground: 229 63% 3%;
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+    --primary: 229 100% 62%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 229 20% 90%;
+    --secondary-foreground: 229 20% 30%;
+    --accent: 229 28% 85%;
+    --accent-foreground: 229 28% 25%;
+    --destructive: 3 100% 50%;
+    --destructive-foreground: 3 0% 100%;
+    --ring: 229 100% 62%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 229 41% 4%;
+    --foreground: 229 23% 99%;
+    --muted: 229 12% 14%;
+    --muted-foreground: 229 10% 63%;
+    --popover: 229 41% 5%;
+    --popover-foreground: 0 0% 100%;
+    --card: 229 41% 5%;
+    --card-foreground: 0 0% 100%;
+    --border: 215 27.9% 16.9%;
+    --input: 215 27.9% 16.9%;
+    --primary: 229 100% 62%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 229 14% 8%;
+    --secondary-foreground: 229 14% 68%;
+    --accent: 229 23% 17%;
+    --accent-foreground: 229 23% 77%;
+    --destructive: 3 89% 54%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 229 100% 62%;
+  }
+}
+
 @layer utilities {
 
   /* Hide scrollbar for Chrome, Safari and Opera */
@@ -56,6 +108,33 @@ html {
 body {
   -ms-overflow-style: none;
   /* IE and Edge */
+  @apply bg-white dark:bg-neutral-800 text-black dark:text-white;
+}
+
+body * .dark {
+  @apply bg-neutral-800 text-white;
+}
+
+/* .hover {
+  @apply bg-neutral-300;
+}
+
+.dark * .hover {
+  @apply bg-neutral-700;
+} */
+
+.hover {
+  @apply bg-white dark:bg-neutral-800 hover:bg-neutral-200 dark:hover:bg-neutral-700;
+}
+
+.active {
+  @apply bg-neutral-200 dark:bg-neutral-700;
+}
+
+* {
+  color: inherit;
+  @apply bg-transparent;
+  /* @apply bg-white dark:bg-neutral-800 text-black dark:text-white; */
 }
 
 /* .monaco-scrollable-element::-webkit-scrollbar {
