code refactor & updated readme files

--- a/src/App.css
+++ b/src/App.css
@@ -125,15 +125,11 @@ body * .dark {
 }
 
 
-
-@keyframes width-increase {
-  0% {
-    width: 0 !important;
-  }
-
-  100% {
-    width: 100% !important;
-  }
+/* .monaco-editor { */
+.lines-content {
+  /* @apply !px-2 border-none; */
+  /* width: 100% !important; */
+  padding: 0 0 0 3px !important;
 }
 
 /* .animate-width {
